# JUDGMENT

./: .gitignore  .zenodo.json  CITATION.cff  DATA-RIGHTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  lc-harvest.yml  refresh.yml
data/: consolidations.yaml  meta.yaml
data/aggregates/: agreement.yaml  terms.yaml
data/codebook/: README.md  authority.yaml  case-disposition.yaml  cert-reason.yaml  decision-direction.yaml  decision-type.yaml  declaration-unconstitutional.yaml  issue-area.yaml  jurisdiction-partial.yaml  law-type.yaml  lower-court-disposition.yaml  majority.yaml  opinion.yaml  party-winning.yaml  vote-direction.yaml  vote.yaml
data/courts/: natural-courts.yaml
data/forecasts/: scorecard.yaml
data/justices/: a-moore.yaml  abe-fortas.yaml  alfred-moore.yaml  amy-coney-barrett.yaml  d-davis.yaml  (+190 more)
docs/: coldstart-segal-cover.md  data-model.md  methods-audit.md  modeling.md  paper.md  postargument-gate.md  related-work-survey.md  sources.md
models/: README.md  __init__.py  calibrators-pending.yaml  calibrators-postargument.yaml  coalition-params.yaml  coalition.py  export_calibrators.py  features.py  ideal_points.py  lc_classifier.py  pending_issues.yaml  pending_lc.yaml  predict.py  report.py  score.py  walkforward.py
paper/: main.tex  refs.bib
pipeline/: __init__.py  _env.py  aggregates.py  agreement.py  build.py  codes.py  download.py  fjc.py  interim.py  lc_opinions.py  oral_args.py  questions.py  syllabus.py  timing.py  validate.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
(+29572 files in other folders)
