[project]
name = "judgment"
version = "0.1.0"
description = "A statistical model of every U.S. Supreme Court judgment — justices, votes, opinions — built toward forecasting future rulings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kara Zajac" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Heavier stack used by the (future) modeling phase, not by the ETL pipeline.
models = ["numpy>=1.26", "pandas>=2.0", "scikit-learn>=1.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline"]
